# Heimdall-WebSwitch

./: .gitignore  CMakeLists.txt  README.md  Vagrantfile  config.sh  contributors.txt  heimdall_config.conf  hello_world.c  install.sh
code/: apache_status.c  apache_status.h  circular.c  circular.h  config_parser.c  config_parser.h  connection.c  connection.h  hello_world.c  helper.c  helper.h  http_client.c  http_client.h  http_request.c  http_request.h  log.c  log.h  main.c  request.h  round_robin.c  throwable.c  throwable.h
code/HTTP/: connection.c  connection.h  http_client.c  http_client.h  http_request.c  http_request.h  http_response.c  http_response.h
code/config/: config.h  config_parser.h  heimdall_config.c  heimdall_config.conf  server_config.c  server_config.conf
code/http/: connection.c  http_request.c  http_response.c
code/include/: apache_status.h  chunk.h  circular.h  connection.h  fd_pool.h  heimdall_config.h  heimdall_shm.h  helper.h  http_request.h  http_response.h  log.h  macro.h  message_controller.h  request_node.h  request_queue.h  round_robin.h  scheduler.h  server_config.h  server_pool.h  shared_mem.h  thread_pool.h  throwable.h  types.h  unix_socket.h  watchdog.h  worker.h  worker_pool.h
code/utils/: helper.c  helper.h  log.c  log.h  request_fifo.c  request_fifo.h  request_node.c  request_node.h  request_queue.c  request_queue.h  throwable.c  throwable.h  unix_socket.c
code/web_switch/: apache_status.c  apache_status.h  chunk.c  circular.c  circular.h  config_parser.c  config_parser.h  fd_pool.c  heimdall_shm.c  message_controller.c  request_node.c  request_queue.c  round_robin.c  round_robin.h  scheduler.c  server_pool.c  shared_mem.c  thread_pool.c  thread_pool.h  watchdog.c  watchdog.h  worker.c  worker.h  worker_obj.c  worker_obj.h  worker_pool.c  worker_pool.h
report/: relation.tex  tktltiki2.cls
report/.texpadtmp/: relation.aux  relation.blg  relation.out  relation.toc
